Agregado título y cuerpo de página

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="es">
 	<head>
 		<meta charset="utf-8">
-		<title></title>
+		<title>Asteroides</title>
 		<link rel="stylesheet" type="text/css" href="css/estilos.css">
 	</head>
 	<body>
+		<div id="asteroides"></div>
 	</body>
 </html>
