Agregadas referencias a ficheros JS

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<meta charset="utf-8">
 		<title>Asteroides</title>
 		<link rel="stylesheet" type="text/css" href="css/estilos.css">
+		<script type="text/javascript" src="js/phaser.2.6.2.min.js"></script>
+		<script type="text/javascript" src="js/funciones.js"></script>
 	</head>
 	<body>
 		<div id="asteroides"></div>
