--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="es">
 	<head>
 		<meta charset="utf-8">
-		<title>Asteroides</title>
+		<title>Space Invaders</title>
 		<link rel="stylesheet" type="text/css" href="css/estilos.css">
 		<script type="text/javascript" src="js/phaser.2.6.2.min.js"></script>
 		<script type="text/javascript" src="js/funciones.js"></script>
 	</head>
 	<body>
-		<div id="asteroides"></div>
+		<div id="space"></div>
 	</body>
 </html>
