Asignado estado lose al perder juego

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<script type="text/javascript" src="js/menu.js"></script>
 		<script type="text/javascript" src="js/play.js"></script>
 		<script type="text/javascript" src="js/win.js"></script>
+		<script type="text/javascript" src="js/lose.js"></script>
 		<script type="text/javascript" src="js/game.js"></script>
 	</head>
 	<body>
