--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<script type="text/javascript" src="js/boot.js"></script>
 		<script type="text/javascript" src="js/load.js"></script>
 		<script type="text/javascript" src="js/menu.js"></script>
-		<script type="text/javascript" src="js/play.js"></script>
+		<script type="text/javascript" src="js/level1.js"></script>
 		<script type="text/javascript" src="js/win.js"></script>
 		<script type="text/javascript" src="js/lose.js"></script>
 		<script type="text/javascript" src="js/game.js"></script>
