--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<script type="text/javascript" src="js/boot.js"></script>
 		<script type="text/javascript" src="js/load.js"></script>
 		<script type="text/javascript" src="js/menu.js"></script>
+		<script type="text/javascript" src="js/options.js"></script>
 		<script type="text/javascript" src="js/score.js"></script>
 		<script type="text/javascript" src="js/level1.js"></script>
 		<script type="text/javascript" src="js/win.js"></script>
