Agregados controladores de audio en opciones y nivel 1

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<link rel="icon" type="image/x-icon" href="assets/sprites/shmup-ship.png"/>
 		<link rel="stylesheet" type="text/css" href="css/estilos.css">
 		<script type="text/javascript" src="js/phaser.2.6.2.min.js"></script>
+		<script type="text/javascript" src="js/slick-ui.min.js"></script>
 		<script type="text/javascript" src="js/boot.js"></script>
 		<script type="text/javascript" src="js/load.js"></script>
 		<script type="text/javascript" src="js/menu.js"></script>
@@ -25,6 +26,6 @@
 		<script type="text/javascript" src="js/game.js"></script>
 	</head>
 	<body>
-		
+
 	</body>
 </html>
