--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<link rel="stylesheet" type="text/css" href="css/estilos.css">
 		<script type="text/javascript" src="js/phaser.2.6.2.min.js"></script>
 		<script type="text/javascript" src="js/slick-ui.min.js"></script>
+		<script type="text/javascript" src="js/phaser-virtual-gamepad.js"></script>
 		<script type="text/javascript" src="js/boot.js"></script>
 		<script type="text/javascript" src="js/load.js"></script>
 		<script type="text/javascript" src="js/menu.js"></script>
