Agregado prototipo de nivel 2

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
 		<script type="text/javascript" src="js/score.js"></script>
 		<script type="text/javascript" src="js/level1.js"></script>
 		<script type="text/javascript" src="js/levelUp.js"></script>
+		<script type="text/javascript" src="js/level2.js"></script>
 		<script type="text/javascript" src="js/win.js"></script>
 		<script type="text/javascript" src="js/lose.js"></script>
 		<script type="text/javascript" src="js/game.js"></script>
