--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
 		<script type="text/javascript" src="js/level1.js"></script>
 		<script type="text/javascript" src="js/levelUp.js"></script>
 		<script type="text/javascript" src="js/level2.js"></script>
+		<script type="text/javascript" src="js/level3.js"></script>
 		<script type="text/javascript" src="js/win.js"></script>
 		<script type="text/javascript" src="js/lose.js"></script>
 		<script type="text/javascript" src="js/game.js"></script>
