--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,9 @@
 		<meta name="author" content="2017IESAguadulce" />
 		<link rel="icon" type="image/x-icon" href="assets/sprites/shmup-ship.png"/>
 		<link rel="stylesheet" type="text/css" href="css/estilos.css">
-		<script type="text/javascript" src="js/phaser.2.6.2.min.js"></script>
-		<script type="text/javascript" src="js/slick-ui.min.js"></script>
-		<script type="text/javascript" src="js/phaser-virtual-gamepad.js"></script>
+		<script type="text/javascript" src="js/libs/phaser.2.6.2.min.js"></script>
+		<script type="text/javascript" src="js/libs/slick-ui.min.js"></script>
+		<script type="text/javascript" src="js/libs/phaser-virtual-gamepad.js"></script>
 		<script type="text/javascript" src="js/boot.js"></script>
 		<script type="text/javascript" src="js/load.js"></script>
 		<script type="text/javascript" src="js/menu.js"></script>
